feat(): Onboarding Checklist

--- a/src/locales/default.json
+++ b/src/locales/default.json
@@ -612,5 +612,15 @@
       "empty": "There are no assets in this contract"
     },
     "24hChange": "24h change"
+  },
+  "onboarding": {
+    "title": "New to Snapshot?",
+    "subtitle": "Here is a quick check list to get started:",
+    "close": "Hide onboarding cheklist",
+    "profile": "Set your public profile",
+    "space": "Join your favorite space",
+    "vote": "Cast your first vote",
+    "proposal": "Create a proposal",
+    "congratulations": "Congratulations"
   }
 }
