--- a/src/locales/fr-FR.json
+++ b/src/locales/fr-FR.json
@@ -602,5 +602,15 @@
       "empty": "There are no assets in this contract"
     },
     "24hChange": "24h change"
+  },
+  "onboarding": {
+    "title": "Nouveau sur Snapshot ?",
+    "subtitle": "Voici une checklist rapide pour commencer :",
+    "close": "Cacher la checklist",
+    "profile": "Définir votre profil public",
+    "space": "Rejoindre votre espace préféré",
+    "vote": "Votre premier vote",
+    "proposal": "Créer une proposition",
+    "congratulations": "Félicitations"
   }
 }
