--- a/src/locales/default.json
+++ b/src/locales/default.json
@@ -287,7 +287,7 @@
       "parent": {
         "label": "Main space",
         "placeholder": "e.g. fabien.eth",
-        "information": "The main space of your DAO, which this space is a sub-space of. It will be displayed in the space's sidebar menu."
+        "information": "The space that this space is a sub-space of will be displayed on the space page"
       },
       "children": {
         "label": "Sub-spaces",
