--- a/src/locales/default.json
+++ b/src/locales/default.json
@@ -286,14 +286,16 @@
       "information": "Sub-spaces will only be shown once configured on both the main space and the sub-space(s). {docs}",
       "parent": {
         "label": "Main space",
-        "placeholder": "e.g. fabien.eth",
+        "placeholder": "fabien.eth",
         "information": "The space that this space is a sub-space of will be displayed on the space page"
       },
       "children": {
         "label": "Sub-spaces",
-        "placeholder": "e.g. fabien.eth, balancer.eth, ...",
+        "placeholder": "fabien.eth",
         "information": "Related sub-spaces listed here will be displayed on the space page"
-      }
+      },
+      "addSubspace": "Add",
+      "childNotFound": "not found"
     },
     "website": "Website",
     "strategies": {
