fixed sub-dao fields

--- a/src/locales/default.json
+++ b/src/locales/default.json
@@ -295,7 +295,8 @@
         "information": "Related sub-spaces listed here will be displayed on the space page"
       },
       "addSubspace": "Add",
-      "childNotFound": "not found"
+      "childNotFound": "not found",
+      "parentNotFound": "not found"
     },
     "website": "Website",
     "strategies": {
