Add post vote modal and share

--- a/src/locales/default.json
+++ b/src/locales/default.json
@@ -11,6 +11,7 @@
   "retry": "Retry",
   "currentResults": "Current results",
   "reset": "Reset",
+  "close": "Close",
   "save": "Save",
   "author": "Author",
   "next": "Next",
@@ -133,6 +134,7 @@
   "confirmAction": "Confirm action",
   "or": "or",
   "share": "Share",
+  "shareOnTwitter": "Share on Twitter",
   "createButton": "Create",
   "discussion": "Discussion",
   "changeWallet": "Change wallet",
