Add button to safe queue

--- a/src/locales/default.json
+++ b/src/locales/default.json
@@ -233,6 +233,7 @@
       "defaultTitle": "Your vote is in!",
       "gnosisSafeTitle": "Your vote is pending...",
       "gnosisSafeDescription": " Votes with a Safe require additional signers and will be visible once the transaction is confirmed",
+      "seeQueue": "See queued transactions",
       "tips": {
         "1": "Votes can be changed while the proposal is active"
       }
