Add suggested changes

--- a/src/locales/default.json
+++ b/src/locales/default.json
@@ -689,6 +689,6 @@
     "github": "GitHub",
     "docs": "Docs",
     "support": "Support",
-    "hiring": "We're hiring!"
+    "hiring": "Join us!"
   }
 }
