--- a/src/locales/default.json
+++ b/src/locales/default.json
@@ -493,6 +493,7 @@
     "networks": "network(s)",
     "plugins": "plugin(s)",
     "results": "result(s)",
+    "category": "Category",
     "categories": {
       "all": "All",
       "protocol": "Protocol",
@@ -503,7 +504,8 @@
       "media": "Media",
       "creator": "Creator",
       "collector": "Collector"
-    }
+    },
+    "spaces": "space(s)"
   },
   "voting": {
     "selectVoting": "Select voting system",
